test/functions/ferguson/ref-return-intent-ambigous-value.good
ref-return-intent-ambigous-value.chpl:16: error: ambiguous call 'access()'
ref-return-intent-ambigous-value.chpl:8: note: candidates are: access()
ref-return-intent-ambigous-value.chpl:12: note:                 access()
